deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cooker
  labels:
    app.kubernetes.io/name: cooker
