deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cooker
  namespace: cooker
  labels:
    app.kubernetes.io/name: cooker
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: cooker
